<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@color/backgroundcolor"
    tools:context="com.example.zsoltvarga.hydrate.UserDetails">

    <include
        layout="@layout/layout_toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/iWeightBox"/>

    <TextView
        android:id="@+id/textIweight"
        android:text="@string/iWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="normal"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
         />

    <TextView
        android:id="@+id/textMass"
        android:text="@string/mass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_below="@id/textIweight"
        />

    <TextView
        android:id="@+id/textWorkOut"
        android:text="@string/workOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="normal"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/textMass"
         />

    <TextView
        android:id="@+id/numberOfHours"
        android:text="@string/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_below="@id/textWorkOut"
        />

    <TextView
        android:id="@+id/aDay"
        android:text="@string/a_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="normal"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_below="@id/numberOfHours"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:id="@+id/targetBoxW"
        />

    <TextView
        android:id="@+id/shouldDrink"
        android:text="@string/shoudLitres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/water"
        android:textSize="60dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/target"
        android:text="@string/textTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/water"
        android:textSize="25dp"
        android:textStyle="normal"
        android:gravity="center"
        android:textAllCaps="true"
        android:layout_above="@id/shouldDrink"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>



</RelativeLayout>
